[gd_scene load_steps=6 format=3 uid="uid://bs754w0rxw8n0"]

[ext_resource type="Script" path="res://quadrante.gd" id="1_qhall"]
[ext_resource type="Texture2D" uid="uid://b2qq4itacj3hp" path="res://pixil-frame-0 (17).png" id="1_te8ej"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4fyf3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_te8ej")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t1w7g"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_50ju7"]
size = Vector2(32, 31)

[node name="Quadrante" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource("1_qhall")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4fyf3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_t1w7g")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_50ju7")

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = 6.0
offset_top = -49.0
offset_right = 46.0
offset_bottom = -26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[connection signal="espalhar" from="." to="." method="espalhar_rastros"]
